# elemaudio-resources

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  resource.rs
