[package]
name = "elemaudio-resources"
version = "0.1.0"
edition = "2024"

[dependencies]
elemaudio-rs = { path = "../elemaudio-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = { version = "0.7", features = ["validation"] }
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav"] }
hound = "3"
