[package]
name = "elemaudio-resources"
version = "0.1.0"
edition = "2024"

[lib]
name = "elemaudio_resources"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = { version = "0.7", features = ["validation"] }
symphonia = { version = "0.5", features = ["wav"] }
hound = "3"
